@@ -1,0 +1,77 @@
+.TH "mbuffer" "1" "20010208" "Thomas Maier-Komor" "console utility"
+.SH "NAME"
+mbuffer \- measuring buffer
+.SH "SYNTAX"
+.LP 
+mbuffer [\fIoptions\fP]
+.SH "DESCRIPTION"
+.LP 
+mbuffer buffers i/o operations and displays the throughput rate. It is multithreaded and offers more options than the standard buffer.
+.SH "OPTIONS"
+.LP 
+.TP 
+\fB\-i\fR <\fIfilename\fP>
+use \fIfilename\fP as input instead of the standard input
+.TP 
+\fB\-o\fR <\fIfilename\fP>
+use \fIfilename\fP as output instead of the standard output
+.TP 
+\fB\-b\fR <\fInum\fP>
+use \fInum\fP blocks for buffer (default 256)
+.TP 
+\fB\-s\fR <\fIsize\fP>
+use blocks of \fIsize\fP bytes for buffer (default 10240)
+.TP 
+\fB\-m\fR <\fIsize\fP>
+use a total of \fIsize\fP bytes for buffer (default 2MB)
+.TP 
+\fB\-t\fR
+use a memory mapped temporaray file as buffer (use with huge buffers)
+.TP 
+\fB\-T\fR <\fIfile\fP>
+as \-t but use \fIfile\fP instead
+.TP 
+\fB\-p\fR <\fInum\fP>
+start writing after the buffer has been filled to \fInum\fP% (default 0 \- start at once)
+.TP 
+\fB\-l\fR <\fIfile\fP>
+log messages to \fIfile\fP instead of standard error output
+.TP 
+\fB\-u\fR <\fInum\fP>
+pause \fInum\fP microseconds after each write \- might increase performance on some drives
+.TP 
+\fB\-f\fR
+overwrite output file if it exists already
+.TP 
+\fB\-v\fR <\fInum\fP>
+set verbose level to \fInum\fP (valid values are 0..5, 0 = none, 5 = all, even debugging informations)
+.TP 
+\fB\-q\fR
+quiet \- do not display the status on the standard error output
+.TP 
+\fB\-\-help\fR
+Output help information and exit.
+.TP 
+\fB\-\-version\fR
+Output version information and exit.
+.SH "FILES"
+.LP 
+\fI/usr/bin/mbuffer\fP 
+.br 
+\fI/tmp/mbuffer*\fP 
+.SH "EXAMPLES"
+.LP 
+To run this program with the default options just type
+.LP 
+mbuffer
+.LP 
+Using mbuffer to do a backup with tar to the default tape device. Options for this example: memory mapped temporary file with a size of 10 Megabytes, start after 80% of the buffer have been filled.
+.LP 
+tar cf \- mydirectory | gzip | mbuffer \-t \-m 10M \-p 80 > $TAPE
+.SH "AUTHORS"
+.LP 
+Thomas Maier\-Komor <software@maier\-komor.de>
+
+.SH "SEE ALSO"
+.LP 
+buffer(1)
